<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#304769"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context="com.hamzabelkhiria.miniprojectfreelance.RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="#FC0F0E0E"
        android:textColorHint="#88352A2A"
        android:textSize="26sp"
        android:textStyle="bold"
        />


    <EditText
        android:id="@+id/etfullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:textColor="#FC0F0E0E"
        android:textColorHint="#88352A2A"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="E-Mail"
        android:inputType="textPersonName"
        android:textColor="#FC0F0E0E"
        android:textColorHint="#88352A2A"
        android:padding="10dp" />


    <EditText
        android:id="@+id/etpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/password"
        android:textColor="#FC0F0E0E"
        android:textColorHint="#88352A2A"
        android:inputType="textPassword"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etconfirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="#FC0F0E0E"
        android:textColorHint="#88352A2A"
        android:padding="10dp" />

    <Button
        android:id="@+id/uploadimg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Upload Image" />

    <ImageView
        android:id="@+id/signupimg"
        android:layout_width="128dp"
        android:layout_height="113dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/customtoasticon" />

    <Button
        android:id="@+id/btnregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#f05924"
        android:text="@string/register"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/already_having_account"
        android:textColor="#ccc" />

    <Button
        android:id="@+id/btnregisterlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#aaa"
        android:text="@string/log_in"
        android:textColor="@android:color/white" />

</LinearLayout>